Create geometry with lsize and rside.
Geometry describes a board with a given size “n”.
“lside” is a bitboard for left size of the board.
“rside” is a bitboard for right size of the board.

--- a/sources/Makefile.am
+++ b/sources/Makefile.am
@@ -11,4 +11,4 @@ endif
 
 
 virus_war_CFLAGS = $(EXTRA_CFLAGS)
-virus_war_SOURCES = main.c parser.c utils.c
+virus_war_SOURCES = main.c game.c parser.c utils.c
