--- a/sources/Makefile.am
+++ b/sources/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = virus-war
+BUILT_SOURCES = hashes.h
 
 
 
@@ -11,4 +12,7 @@ endif
 
 
 virus_war_CFLAGS = $(EXTRA_CFLAGS)
-virus_war_SOURCES = main.c game.c random-ai.c parser.c utils.c
+virus_war_SOURCES = main.c game.c random-ai.c parser.c utils.c calc-hash.awk
+
+hashes.h: calc-hash.awk random-ai.c
+	sha512sum random-ai.c | awk -f calc-hash.awk > hashes.h
