--- a/sources/Makefile.am
+++ b/sources/Makefile.am
@@ -12,7 +12,7 @@ endif
 
 
 virus_war_CFLAGS = $(EXTRA_CFLAGS)
-virus_war_SOURCES = main.c game.c random-ai.c parser.c utils.c calc-hash.awk
+virus_war_SOURCES = main.c game.c mcts-ai.c random-ai.c parser.c utils.c calc-hash.awk
 
-hashes.h: calc-hash.awk random-ai.c
-	sha512sum random-ai.c | awk -f calc-hash.awk > hashes.h
+hashes.h: calc-hash.awk mcts-ai.c random-ai.c
+	sha512sum mcts-ai.c random-ai.c | awk -f calc-hash.awk > hashes.h
